--- a/content/themes/rolledesign/css/dev/gutenberg-editor-styles.css
+++ b/content/themes/rolledesign/css/dev/gutenberg-editor-styles.css
@@ -372,8 +372,10 @@
 
 .gutenberg-content > * {
   line-height: var(--line-height-paragraphs-blog);
-  margin-left: auto;
-  margin-right: auto;
+  /* stylelint-disable-next-line */
+  margin-left: auto !important;
+  /* stylelint-disable-next-line */
+  margin-right: auto !important;
   max-width: 720px;
   padding-left: 0;
   padding-right: 0;
